[PN-16647] Feature: Implementation on retrieve reworks api