@@ -1,19 +1,9 @@
 package it.pagopa.pn.delivery.rest;
 
-import it.pagopa.pn.commons.exceptions.PnHttpResponseException;
 import it.pagopa.pn.delivery.PnDeliveryConfigs;
-import it.pagopa.pn.delivery.generated.openapi.msclient.deliverypush.v1.model.ReworkError;
-import it.pagopa.pn.delivery.generated.openapi.msclient.deliverypush.v1.model.ReworkResponse;
-import it.pagopa.pn.delivery.generated.openapi.msclient.safestorage.v1.model.FileDownloadResponse;
-import it.pagopa.pn.delivery.generated.openapi.server.rework.v1.dto.ReworkRequest;
-import it.pagopa.pn.delivery.generated.openapi.server.v1.dto.NotificationStatusV26;
+import it.pagopa.pn.delivery.generated.openapi.server.rework.v1.dto.ReworkItemsResponse;
 import it.pagopa.pn.delivery.middleware.notificationdao.NotificationReworksDao;
 import it.pagopa.pn.delivery.middleware.notificationdao.entities.NotificationReworksEntity;
-import it.pagopa.pn.delivery.models.InternalNotification;
-import it.pagopa.pn.delivery.models.internal.notification.NotificationAttachmentBodyRef;
-import it.pagopa.pn.delivery.models.internal.notification.NotificationAttachmentDigests;
-import it.pagopa.pn.delivery.models.internal.notification.NotificationDocument;
-import it.pagopa.pn.delivery.models.internal.notification.NotificationRecipient;
 import it.pagopa.pn.delivery.pnclient.deliverypush.PnDeliveryPushClientImpl;
 import it.pagopa.pn.delivery.pnclient.safestorage.PnSafeStorageClientImpl;
 import it.pagopa.pn.delivery.svc.search.NotificationRetrieverService;
@@ -23,15 +13,17 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.reactive.WebFluxTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.boot.test.mock.mockito.SpyBean;
-import org.springframework.http.MediaType;
 import org.springframework.test.web.reactive.server.WebTestClient;
 import reactor.core.publisher.Mono;
+import software.amazon.awssdk.enhanced.dynamodb.model.Page;
 
-import java.time.OffsetDateTime;
+import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.anyBoolean;
 import static org.mockito.Mockito.when;
 
 @WebFluxTest(NotificationReworkController.class)
@@ -56,438 +48,113 @@ class NotificationReworkControllerTest {
     private ModelMapper modelMapper;
 
     @Test
-    void notificationRework_success() {
-        ReworkRequest reworkRequest = new ReworkRequest();
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        reworkRequest.setExpectedStatusCode("RECRN001A");
-        reworkRequest.setExpectedDeliveryFailureCause("M01");
-        reworkRequest.setReason("Ragione di prova");
-        reworkRequest.setPcRetry("PCRETRY_0");
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        InternalNotification notification = new InternalNotification();
-        NotificationDocument doc = new NotificationDocument();
-        doc.setTitle("title");
-        doc.setDigests(new NotificationAttachmentDigests());
-        NotificationAttachmentBodyRef ref = new NotificationAttachmentBodyRef();
-        ref.setKey("key");
-        ref.setVersionToken("1");
-        doc.setRef(ref);
-        doc.setDocIdx("docIdx");
+    void retrieveNotificationRework_returnsAllEntitiesForIun() {
+        NotificationReworksEntity entity1 = new NotificationReworksEntity();
+        entity1.setReworkId("rw1");
+        entity1.setStatus("DONE");
+        entity1.setExpectedStatusCodes(List.of("CODE1"));
+        entity1.setExpectedDeliveryFailureCause("CAUSE1");
+        entity1.setReason("Reason1");
+        entity1.setCreatedAt(Instant.now());
+        entity1.setUpdatedAt(Instant.now());
+        entity1.setInvalidatedTimelineElementIds(List.of("el1", "el2"));
 
-        List<NotificationDocument> documents = List.of(doc);
-        notification.setDocuments(documents);
-        notification.setRecipients(List.of(NotificationRecipient.builder().build()));
-        notification.setNotificationStatus(NotificationStatusV26.EFFECTIVE_DATE);
-        when(retrieveSvc.getNotificationInformation(any(), anyBoolean(), anyBoolean())).thenReturn(notification);
-        ReworkResponse notificationRework = new ReworkResponse();
-        when(deliveryPushClient.notificationRework(any(), any())).thenReturn(Mono.just(notificationRework));
-        when(notificationReworksDao.putIfAbsent(any())).thenReturn(Mono.empty());
-        when(notificationReworksDao.findLatestByIun(any())).thenReturn(Mono.empty());
-        FileDownloadResponse fileDownloadResponse = new FileDownloadResponse();
-        fileDownloadResponse.setRetentionUntil(OffsetDateTime.now().plusDays(30));
-        when(safeStorageClient.getFile(any(), any())).thenReturn(fileDownloadResponse);
+        NotificationReworksEntity entity2 = new NotificationReworksEntity();
+        entity2.setReworkId("rw2");
+        entity2.setStatus("IN_PROGRESS");
+        entity2.setExpectedStatusCodes(List.of("CODE2"));
+        entity2.setExpectedDeliveryFailureCause("CAUSE2");
+        entity2.setReason("Reason2");
+        entity2.setCreatedAt(Instant.now());
+        entity2.setUpdatedAt(Instant.now());
+        entity2.setInvalidatedTimelineElementIds(List.of("el3"));
 
+        when(notificationReworksDao.findByIun(any(), any(Map.class), any(Integer.class)))
+                .thenReturn(Mono.just(Page.create(List.of(entity1, entity2), null)));
 
-        webTestClient.put()
-                .uri( "/delivery-private/v1/notifications/{iun}/rework"
-                        .replace( "{iun}", IUN ))
-                .body(Mono.just(reworkRequest), ReworkRequest.class)
-                .accept( MediaType.APPLICATION_JSON )
-                .exchange()
-                .expectStatus()
-                .isOk()
-                .expectBody( it.pagopa.pn.delivery.generated.openapi.server.rework.v1.dto.ReworkResponse.class );
-
-    }
-
-    @Test
-    void notificationRework_invalidTimelineElementError() {
-        ReworkRequest reworkRequest = new ReworkRequest();
-        InternalNotification notification = new InternalNotification();
-        notification.setRecipients(List.of());
-        notification.setNotificationStatus(NotificationStatusV26.EFFECTIVE_DATE);
-
-        when(retrieveSvc.getNotificationInformation(any(), anyBoolean(), anyBoolean())).thenReturn(notification);
-
-        ReworkError error = new ReworkError().cause("INVALID_TIMELINE_ELEMENT").description("Errore timeline");
-        ReworkResponse reworkResponse = new ReworkResponse();
-        reworkResponse.setErrors(List.of(error));
-        when(deliveryPushClient.notificationRework(any(), any())).thenReturn(Mono.just(reworkResponse));
-        when(notificationReworksDao.putIfAbsent(any())).thenReturn(Mono.empty());
-        when(notificationReworksDao.findLatestByIun(any())).thenReturn(Mono.empty());
-
-        webTestClient.put()
+        webTestClient.get()
                 .uri("/delivery-private/v1/notifications/{iun}/rework", IUN)
-                .body(Mono.just(reworkRequest), ReworkRequest.class)
-                .accept(MediaType.APPLICATION_JSON)
+                .accept(org.springframework.http.MediaType.APPLICATION_JSON)
                 .exchange()
-                .expectStatus().is4xxClientError();
+                .expectStatus().isOk()
+                .expectBody(ReworkItemsResponse.class)
+                .value(resp -> {
+                    assertThat(resp.getItems()).hasSize(2);
+                    assertThat(resp.getItems().get(0).getReworkId()).isEqualTo("rw1");
+                    assertThat(resp.getItems().get(1).getReworkId()).isEqualTo("rw2");
+                });
     }
 
     @Test
-    void notificationRework_genericError() {
-        ReworkRequest reworkRequest = new ReworkRequest();
-        InternalNotification notification = new InternalNotification();
-        notification.setRecipients(List.of());
-        notification.setNotificationStatus(NotificationStatusV26.EFFECTIVE_DATE);
+    void retrieveNotificationRework_returnsEmptyListIfNoEntitiesFound() {
+        when(notificationReworksDao.findByIun(any(), any(Map.class), any(Integer.class)))
+                .thenReturn(Mono.just(Page.create(Collections.emptyList())));
 
-        when(retrieveSvc.getNotificationInformation(any(), anyBoolean(), anyBoolean())).thenReturn(notification);
-
-        ReworkError error = new ReworkError().cause("GENERIC_ERROR").description("Errore generico");
-        ReworkResponse reworkResponse = new ReworkResponse();
-        reworkResponse.setErrors(List.of(error));
-        when(deliveryPushClient.notificationRework(any(), any())).thenReturn(Mono.just(reworkResponse));
-        when(notificationReworksDao.putIfAbsent(any())).thenReturn(Mono.empty());
-        when(notificationReworksDao.findLatestByIun(any())).thenReturn(Mono.empty());
-
-        webTestClient.put()
+        webTestClient.get()
                 .uri("/delivery-private/v1/notifications/{iun}/rework", IUN)
-                .body(Mono.just(reworkRequest), ReworkRequest.class)
-                .accept(MediaType.APPLICATION_JSON)
+                .accept(org.springframework.http.MediaType.APPLICATION_JSON)
                 .exchange()
-                .expectStatus().isBadRequest();
+                .expectStatus().isOk()
+                .expectBody(ReworkItemsResponse.class)
+                .value(resp -> assertThat(resp.getItems()).isEmpty());
     }
 
     @Test
-    void notificationRework_mono_statusNotAccepted() {
-        ReworkRequest reworkRequest = new ReworkRequest();
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        reworkRequest.setExpectedStatusCode("RECRN001A");
-        reworkRequest.setExpectedDeliveryFailureCause("M01");
-        reworkRequest.setReason("Ragione di prova");
-        reworkRequest.setPcRetry("PCRETRY_0");
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        InternalNotification notification = new InternalNotification();
-        NotificationDocument doc = new NotificationDocument();
-        doc.setTitle("title");
-        doc.setDigests(new NotificationAttachmentDigests());
-        NotificationAttachmentBodyRef ref = new NotificationAttachmentBodyRef();
-        ref.setKey("key");
-        ref.setVersionToken("1");
-        doc.setRef(ref);
-        doc.setDocIdx("docIdx");
-
-        List<NotificationDocument> documents = List.of(doc);
-        notification.setDocuments(documents);
-        notification.setRecipients(List.of(NotificationRecipient.builder().build()));
-        notification.setNotificationStatus(NotificationStatusV26.DELIVERING);
-        when(retrieveSvc.getNotificationInformation(any(), anyBoolean(), anyBoolean())).thenReturn(notification);
-        ReworkResponse notificationRework = new ReworkResponse();
-        when(deliveryPushClient.notificationRework(any(), any())).thenReturn(Mono.just(notificationRework));
-        when(notificationReworksDao.putIfAbsent(any())).thenReturn(Mono.empty());
-        when(notificationReworksDao.findLatestByIun(any())).thenReturn(Mono.empty());
-        FileDownloadResponse fileDownloadResponse = new FileDownloadResponse();
-        fileDownloadResponse.setRetentionUntil(OffsetDateTime.now().plusDays(30));
-        when(safeStorageClient.getFile(any(), any())).thenReturn(fileDownloadResponse);
-
-
-        webTestClient.put()
-                .uri( "/delivery-private/v1/notifications/{iun}/rework"
-                        .replace( "{iun}", IUN ))
-                .body(Mono.just(reworkRequest), ReworkRequest.class)
-                .accept( MediaType.APPLICATION_JSON )
-                .exchange()
-                .expectStatus()
-                .isBadRequest()
-                .expectBody( it.pagopa.pn.delivery.generated.openapi.server.rework.v1.dto.ReworkResponse.class );
-
-    }
-
-    @Test
-    void notificationRework_multi_statusNotAccepted() {
-        ReworkRequest reworkRequest = new ReworkRequest();
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        reworkRequest.setExpectedStatusCode("RECRN001A");
-        reworkRequest.setExpectedDeliveryFailureCause("M01");
-        reworkRequest.setReason("Ragione di prova");
-        reworkRequest.setPcRetry("PCRETRY_0");
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        InternalNotification notification = new InternalNotification();
-        NotificationDocument doc = new NotificationDocument();
-        doc.setTitle("title");
-        doc.setDigests(new NotificationAttachmentDigests());
-        NotificationAttachmentBodyRef ref = new NotificationAttachmentBodyRef();
-        ref.setKey("key");
-        ref.setVersionToken("1");
-        doc.setRef(ref);
-        doc.setDocIdx("docIdx");
-
-        List<NotificationDocument> documents = List.of(doc);
-        notification.setDocuments(documents);
-        notification.setRecipients(List.of(NotificationRecipient.builder().build(), NotificationRecipient.builder().build()));
-        notification.setNotificationStatus(NotificationStatusV26.REFUSED);
-        when(retrieveSvc.getNotificationInformation(any(), anyBoolean(), anyBoolean())).thenReturn(notification);
-        ReworkResponse notificationRework = new ReworkResponse();
-        when(deliveryPushClient.notificationRework(any(), any())).thenReturn(Mono.just(notificationRework));
-        when(notificationReworksDao.putIfAbsent(any())).thenReturn(Mono.empty());
-        when(notificationReworksDao.findLatestByIun(any())).thenReturn(Mono.empty());
-        FileDownloadResponse fileDownloadResponse = new FileDownloadResponse();
-        fileDownloadResponse.setRetentionUntil(OffsetDateTime.now().plusDays(30));
-        when(safeStorageClient.getFile(any(), any())).thenReturn(fileDownloadResponse);
-
-
-        webTestClient.put()
-                .uri( "/delivery-private/v1/notifications/{iun}/rework"
-                        .replace( "{iun}", IUN ))
-                .body(Mono.just(reworkRequest), ReworkRequest.class)
-                .accept( MediaType.APPLICATION_JSON )
-                .exchange()
-                .expectStatus()
-                .isBadRequest()
-                .expectBody( it.pagopa.pn.delivery.generated.openapi.server.rework.v1.dto.ReworkResponse.class );
-
-    }
-
-    @Test
-    void notificationRework_rework_already_present_error() {
-        ReworkRequest reworkRequest = new ReworkRequest();
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        reworkRequest.setExpectedStatusCode("RECRN001A");
-        reworkRequest.setExpectedDeliveryFailureCause("M01");
-        reworkRequest.setReason("Ragione di prova");
-        reworkRequest.setPcRetry("PCRETRY_0");
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        InternalNotification notification = new InternalNotification();
-        NotificationDocument doc = new NotificationDocument();
-        doc.setTitle("title");
-        doc.setDigests(new NotificationAttachmentDigests());
-        NotificationAttachmentBodyRef ref = new NotificationAttachmentBodyRef();
-        ref.setKey("key");
-        ref.setVersionToken("1");
-        doc.setRef(ref);
-        doc.setDocIdx("docIdx");
-
-        List<NotificationDocument> documents = List.of(doc);
-        notification.setDocuments(documents);
-        notification.setRecipients(List.of(NotificationRecipient.builder().build()));
-        notification.setNotificationStatus(NotificationStatusV26.DELIVERING);
-        when(retrieveSvc.getNotificationInformation(any(), anyBoolean(), anyBoolean())).thenReturn(notification);
-        ReworkResponse notificationRework = new ReworkResponse();
-        when(deliveryPushClient.notificationRework(any(), any())).thenReturn(Mono.just(notificationRework));
-        when(notificationReworksDao.putIfAbsent(any())).thenReturn(Mono.empty());
+    void retrieveNotificationRework_withReworkId_returnsSingleEntity() {
         NotificationReworksEntity entity = new NotificationReworksEntity();
-        entity.setStatus("PENDING");
-        when(notificationReworksDao.findLatestByIun(any())).thenReturn(Mono.just(entity));
-        FileDownloadResponse fileDownloadResponse = new FileDownloadResponse();
-        fileDownloadResponse.setRetentionUntil(OffsetDateTime.now().plusDays(30));
-        when(safeStorageClient.getFile(any(), any())).thenReturn(fileDownloadResponse);
-
-
-        webTestClient.put()
-                .uri( "/delivery-private/v1/notifications/{iun}/rework"
-                        .replace( "{iun}", IUN ))
-                .body(Mono.just(reworkRequest), ReworkRequest.class)
-                .accept( MediaType.APPLICATION_JSON )
-                .exchange()
-                .expectStatus()
-                .isEqualTo(409)
-                .expectBody( it.pagopa.pn.delivery.generated.openapi.server.rework.v1.dto.ReworkResponse.class );
-
-    }
-
-    @Test
-    void notificationRework_rework_already_present_ok() {
-        ReworkRequest reworkRequest = new ReworkRequest();
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        reworkRequest.setExpectedStatusCode("RECRN001A");
-        reworkRequest.setExpectedDeliveryFailureCause("M01");
-        reworkRequest.setReason("Ragione di prova");
-        reworkRequest.setPcRetry("PCRETRY_0");
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        InternalNotification notification = new InternalNotification();
-        NotificationDocument doc = new NotificationDocument();
-        doc.setTitle("title");
-        doc.setDigests(new NotificationAttachmentDigests());
-        NotificationAttachmentBodyRef ref = new NotificationAttachmentBodyRef();
-        ref.setKey("key");
-        ref.setVersionToken("1");
-        doc.setRef(ref);
-        doc.setDocIdx("docIdx");
-
-        List<NotificationDocument> documents = List.of(doc);
-        notification.setDocuments(documents);
-        notification.setRecipients(List.of(NotificationRecipient.builder().build()));
-        notification.setNotificationStatus(NotificationStatusV26.VIEWED);
-        when(retrieveSvc.getNotificationInformation(any(), anyBoolean(), anyBoolean())).thenReturn(notification);
-        ReworkResponse notificationRework = new ReworkResponse();
-        when(deliveryPushClient.notificationRework(any(), any())).thenReturn(Mono.just(notificationRework));
-        when(notificationReworksDao.putIfAbsent(any())).thenReturn(Mono.empty());
-        NotificationReworksEntity entity = new NotificationReworksEntity();
+        entity.setReworkId("rw1");
         entity.setStatus("DONE");
-        entity.setIdx("2");
-        when(notificationReworksDao.findLatestByIun(any())).thenReturn(Mono.just(entity));
-        FileDownloadResponse fileDownloadResponse = new FileDownloadResponse();
-        fileDownloadResponse.setRetentionUntil(OffsetDateTime.now().plusDays(30));
-        when(safeStorageClient.getFile(any(), any())).thenReturn(fileDownloadResponse);
+        entity.setExpectedStatusCodes(List.of("CODE1"));
+        entity.setExpectedDeliveryFailureCause("CAUSE1");
+        entity.setReason("Reason1");
+        entity.setCreatedAt(Instant.now());
+        entity.setUpdatedAt(Instant.now());
+        entity.setInvalidatedTimelineElementIds(List.of("el1", "el2"));
 
+        when(notificationReworksDao.findByIunAndReworkId(any(), any()))
+                .thenReturn(Mono.just(entity));
 
-        webTestClient.put()
-                .uri( "/delivery-private/v1/notifications/{iun}/rework"
-                        .replace( "{iun}", IUN ))
-                .body(Mono.just(reworkRequest), ReworkRequest.class)
-                .accept( MediaType.APPLICATION_JSON )
+        webTestClient.get()
+                .uri(uriBuilder -> uriBuilder
+                        .path("/delivery-private/v1/notifications/{iun}/rework")
+                        .queryParam("reworkId", "rw1")
+                        .build(IUN))
+                .accept(org.springframework.http.MediaType.APPLICATION_JSON)
                 .exchange()
-                .expectStatus()
-                .isOk()
-                .expectBody( it.pagopa.pn.delivery.generated.openapi.server.rework.v1.dto.ReworkResponse.class );
+                .expectStatus().isOk()
+                .expectBody(ReworkItemsResponse.class)
+                .value(resp -> {
+                    assertThat(resp.getItems()).hasSize(1);
+                    assertThat(resp.getItems().get(0).getReworkId()).isEqualTo("rw1");
+                });
     }
 
     @Test
-    void notificationRework_delivery_push_blocking_error() {
-        ReworkRequest reworkRequest = new ReworkRequest();
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        reworkRequest.setExpectedStatusCode("RECRN001A");
-        reworkRequest.setExpectedDeliveryFailureCause("M01");
-        reworkRequest.setReason("Ragione di prova");
-        reworkRequest.setPcRetry("PCRETRY_0");
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        InternalNotification notification = new InternalNotification();
-        NotificationDocument doc = new NotificationDocument();
-        doc.setTitle("title");
-        doc.setDigests(new NotificationAttachmentDigests());
-        NotificationAttachmentBodyRef ref = new NotificationAttachmentBodyRef();
-        ref.setKey("key");
-        ref.setVersionToken("1");
-        doc.setRef(ref);
-        doc.setDocIdx("docIdx");
+    void retrieveNotificationRework_withReworkId_returnsEmptyListIfNotFound() {
+        when(notificationReworksDao.findByIunAndReworkId(any(), any()))
+                .thenReturn(Mono.empty());
 
-        List<NotificationDocument> documents = List.of(doc);
-        notification.setDocuments(documents);
-        notification.setRecipients(List.of(NotificationRecipient.builder().build()));
-        notification.setNotificationStatus(NotificationStatusV26.VIEWED);
-        when(retrieveSvc.getNotificationInformation(any(), anyBoolean(), anyBoolean())).thenReturn(notification);
-        ReworkResponse notificationRework = new ReworkResponse();
-        ReworkError error = new ReworkError();
-        error.setCause("INVALID_TIMELINE_ELEMENT");
-        error.setDescription("Causa di prova");
-        notificationRework.setErrors(List.of(error));
-        when(deliveryPushClient.notificationRework(any(), any())).thenReturn(Mono.just(notificationRework));
-        when(notificationReworksDao.putIfAbsent(any())).thenReturn(Mono.empty());
-        NotificationReworksEntity entity = new NotificationReworksEntity();
-        entity.setStatus("ERROR");
-        entity.setIdx("2");
-        when(notificationReworksDao.findLatestByIun(any())).thenReturn(Mono.just(entity));
-        when(notificationReworksDao.update(any())).thenReturn(Mono.just(entity));
-        FileDownloadResponse fileDownloadResponse = new FileDownloadResponse();
-        fileDownloadResponse.setRetentionUntil(OffsetDateTime.now().plusDays(30));
-        when(safeStorageClient.getFile(any(), any())).thenReturn(fileDownloadResponse);
-
-
-        webTestClient.put()
-                .uri( "/delivery-private/v1/notifications/{iun}/rework"
-                        .replace( "{iun}", IUN ))
-                .body(Mono.just(reworkRequest), ReworkRequest.class)
-                .accept( MediaType.APPLICATION_JSON )
+        webTestClient.get()
+                .uri(uriBuilder -> uriBuilder
+                        .path("/delivery-private/v1/notifications/{iun}/rework")
+                        .queryParam("reworkId", "notfound")
+                        .build(IUN))
+                .accept(org.springframework.http.MediaType.APPLICATION_JSON)
                 .exchange()
-                .expectStatus()
-                .isEqualTo(409)
-                .expectBody( it.pagopa.pn.delivery.generated.openapi.server.rework.v1.dto.ReworkResponse.class );
-
+                .expectStatus().isOk()
+                .expectBody(ReworkItemsResponse.class)
+                .value(resp -> assertThat(resp.getItems()).isEmpty());
     }
 
     @Test
-    void notificationRework_delivery_push_non_blocking_error() {
-        ReworkRequest reworkRequest = new ReworkRequest();
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        reworkRequest.setExpectedStatusCode("RECRN001A");
-        reworkRequest.setExpectedDeliveryFailureCause("M01");
-        reworkRequest.setReason("Ragione di prova");
-        reworkRequest.setPcRetry("PCRETRY_0");
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        InternalNotification notification = new InternalNotification();
-        NotificationDocument doc = new NotificationDocument();
-        doc.setTitle("title");
-        doc.setDigests(new NotificationAttachmentDigests());
-        NotificationAttachmentBodyRef ref = new NotificationAttachmentBodyRef();
-        ref.setKey("key");
-        ref.setVersionToken("1");
-        doc.setRef(ref);
-        doc.setDocIdx("docIdx");
+    void retrieveNotificationRework_handlesDaoErrorGracefully() {
+        when(notificationReworksDao.findByIun(any(), any(Map.class), any(Integer.class)))
+                .thenReturn(Mono.error(new RuntimeException("DB error")));
 
-        List<NotificationDocument> documents = List.of(doc);
-        notification.setDocuments(documents);
-        notification.setRecipients(List.of(NotificationRecipient.builder().build()));
-        notification.setNotificationStatus(NotificationStatusV26.VIEWED);
-        when(retrieveSvc.getNotificationInformation(any(), anyBoolean(), anyBoolean())).thenReturn(notification);
-        ReworkResponse notificationRework = new ReworkResponse();
-        ReworkError error = new ReworkError();
-        error.setCause("CAUSA DI PROVA");
-        error.setDescription("Causa di prova");
-        notificationRework.setErrors(List.of(error));
-        when(deliveryPushClient.notificationRework(any(), any())).thenReturn(Mono.just(notificationRework));
-        when(notificationReworksDao.putIfAbsent(any())).thenReturn(Mono.empty());
-        NotificationReworksEntity entity = new NotificationReworksEntity();
-        entity.setStatus("ERROR");
-        entity.setIdx("2");
-        when(notificationReworksDao.findLatestByIun(any())).thenReturn(Mono.just(entity));
-        when(notificationReworksDao.update(any())).thenReturn(Mono.just(entity));
-        FileDownloadResponse fileDownloadResponse = new FileDownloadResponse();
-        fileDownloadResponse.setRetentionUntil(OffsetDateTime.now().plusDays(1));
-        when(safeStorageClient.getFile(any(), any())).thenReturn(fileDownloadResponse);
-        when(pnDeliveryConfigs.getDocumentExpiringDateRange()).thenReturn(10);
-
-
-        webTestClient.put()
-                .uri( "/delivery-private/v1/notifications/{iun}/rework"
-                        .replace( "{iun}", IUN ))
-                .body(Mono.just(reworkRequest), ReworkRequest.class)
-                .accept( MediaType.APPLICATION_JSON )
+        webTestClient.get()
+                .uri("/delivery-private/v1/notifications/{iun}/rework", IUN)
+                .accept(org.springframework.http.MediaType.APPLICATION_JSON)
                 .exchange()
-                .expectStatus()
-                .isEqualTo(400)
-                .expectBody( it.pagopa.pn.delivery.generated.openapi.server.rework.v1.dto.ReworkResponse.class );
-
-    }
-
-    @Test
-    void notificationRework_document_gone() {
-        ReworkRequest reworkRequest = new ReworkRequest();
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        reworkRequest.setExpectedStatusCode("RECRN001A");
-        reworkRequest.setExpectedDeliveryFailureCause("M01");
-        reworkRequest.setReason("Ragione di prova");
-        reworkRequest.setPcRetry("PCRETRY_0");
-        reworkRequest.setAttemptId(ReworkRequest.AttemptIdEnum._0);
-        InternalNotification notification = new InternalNotification();
-        NotificationDocument doc = new NotificationDocument();
-        doc.setTitle("title");
-        doc.setDigests(new NotificationAttachmentDigests());
-        NotificationAttachmentBodyRef ref = new NotificationAttachmentBodyRef();
-        ref.setKey("key");
-        ref.setVersionToken("1");
-        doc.setRef(ref);
-        doc.setDocIdx("docIdx");
-
-        List<NotificationDocument> documents = List.of(doc);
-        notification.setDocuments(documents);
-        notification.setRecipients(List.of(NotificationRecipient.builder().build()));
-        notification.setNotificationStatus(NotificationStatusV26.VIEWED);
-        when(retrieveSvc.getNotificationInformation(any(), anyBoolean(), anyBoolean())).thenReturn(notification);
-        ReworkResponse notificationRework = new ReworkResponse();
-        ReworkError error = new ReworkError();
-        error.setCause("CAUSA DI PROVA");
-        error.setDescription("Causa di prova");
-        notificationRework.setErrors(List.of(error));
-        when(deliveryPushClient.notificationRework(any(), any())).thenReturn(Mono.just(notificationRework));
-        when(notificationReworksDao.putIfAbsent(any())).thenReturn(Mono.empty());
-        NotificationReworksEntity entity = new NotificationReworksEntity();
-        entity.setStatus("ERROR");
-        entity.setIdx("2");
-        when(notificationReworksDao.findLatestByIun(any())).thenReturn(Mono.just(entity));
-        when(notificationReworksDao.update(any())).thenReturn(Mono.just(entity));
-        when(safeStorageClient.getFile(any(), any())).thenThrow(new PnHttpResponseException("File gone", 410));
-        when(pnDeliveryConfigs.getDocumentExpiringDateRange()).thenReturn(10);
-
-
-        webTestClient.put()
-                .uri( "/delivery-private/v1/notifications/{iun}/rework"
-                        .replace( "{iun}", IUN ))
-                .body(Mono.just(reworkRequest), ReworkRequest.class)
-                .accept( MediaType.APPLICATION_JSON )
-                .exchange()
-                .expectStatus()
-                .isEqualTo(400)
-                .expectBody( it.pagopa.pn.delivery.generated.openapi.server.rework.v1.dto.ReworkResponse.class );
-
+                .expectStatus().is5xxServerError();
     }
 }
